[package]
name = "cmdroid_ngrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
ngrok = { version = "0.13.1", features = ["axum"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
